--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@trevoreyre/autocomplete-vue": "^2.2.0",
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "moment": "^2.26.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
