--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "covid",
+  "name": "MiCovid",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,13 +10,16 @@
   "dependencies": {
     "@trevoreyre/autocomplete-vue": "^2.2.0",
     "axios": "^0.19.2",
+    "axios-progress-bar": "^1.2.0",
     "core-js": "^3.6.5",
     "moment": "^2.26.0",
+    "register-service-worker": "^1.7.1",
     "vue": "^2.6.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-plugin-eslint": "~4.4.0",
+    "@vue/cli-plugin-pwa": "^4.4.1",
     "@vue/cli-service": "~4.4.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
