--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@trevoreyre/autocomplete-vue": "^2.2.0",
     "axios": "^0.19.2",
     "axios-progress-bar": "^1.2.0",
+    "bootstrap": "^4.5.2",
+    "bootstrap-vue": "^2.16.0",
     "core-js": "^3.6.5",
     "moment": "^2.26.0",
     "register-service-worker": "^1.7.1",
